--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "body-parser": "^1.17.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.9.6",
+    "nodemon": "^1.17.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "request": "^2.81.0"
