--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
   "author": "Beth Johnson",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "webpack": "^2.2.1"
+    "babel-core": "6.23.1",
+    "babel-loader": "6.3.2",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-react": "6.23.0",
+    "webpack": "2.2.1"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "express": "^4.15.0",
-    "jquery": "^3.1.1",
-    "mongoose": "^4.9.6",
-    "nodemon": "^1.17.5",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "request": "^2.81.0"
+    "axios": "0.18.0",
+    "body-parser": "1.18.3",
+    "express": "4.15.0",
+    "jquery": "3.1.1",
+    "mongoose": "4.9.6",
+    "nodemon": "1.17.5",
+    "react": "16.3.0",
+    "react-dom": "16.3.0",
+    "react-music-player": "^1.0.3",
+    "request": "2.81.0",
+    "typeface-roboto": "0.0.54"
   }
 }
