--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "github-fetcher-fullstack-v2",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
-  },
-  "author": "Beth Johnson",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "6.23.1",
-    "babel-loader": "6.3.2",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.23.0",
-    "webpack": "2.2.1"
-  },
-  "dependencies": {
-    "axios": "0.18.0",
-    "body-parser": "1.18.3",
-    "express": "4.15.0",
-    "jquery": "3.1.1",
-    "mongoose": "4.9.6",
-    "nodemon": "1.17.5",
-    "react": "16.3.0",
-    "react-dom": "16.3.0",
-    "react-music-player": "^1.0.3",
-    "request": "2.81.0",
-    "typeface-roboto": "0.0.54"
-  }
+    "name": "github-fetcher-fullstack-v2",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "react-dev": "webpack -d --watch",
+        "server-dev": "nodemon server/index.js",
+        "start": "node server/index.js",
+        "heroku-postbuild": "webpack -d"
+    },
+    "author": "Beth Johnson",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "6.23.1",
+        "babel-loader": "6.3.2",
+        "babel-preset-es2015": "6.22.0",
+        "babel-preset-react": "6.23.0",
+        "webpack": "2.2.1"
+    },
+    "dependencies": {
+        "@material-ui/core": "^1.1.0",
+        "axios": "0.18.0",
+        "body-parser": "1.18.3",
+        "express": "4.15.0",
+        "heroku-cli": "^7.0.9",
+        "jquery": "3.1.1",
+        "mongoose": "4.9.6",
+        "nodemon": "1.17.5",
+        "react": "16.3.0",
+        "react-dom": "16.3.0",
+        "react-music-player": "^1.0.3",
+        "request": "2.81.0",
+        "typeface-roboto": "0.0.54"
+    }
 }
